fb login and is check login

--- a/src/main/webapp/resource/pages/content/outside/employee_home.html
+++ b/src/main/webapp/resource/pages/content/outside/employee_home.html
@@ -68,6 +68,10 @@
                       <i class="fa fa-google-plus">
                       </i>
                     </a>
+                    <a class="btn btn-social-icon btn-google" ng-click="myFacebookLogin()">
+                      <i class="fa fa-facebook">
+                      </i>
+                    </a>
                   </div>
                   <div class="col-sm-12 text-center">
 
