--- a/src/main/webapp/resource/pages/header/header.html
+++ b/src/main/webapp/resource/pages/header/header.html
@@ -217,7 +217,8 @@
                   </a>
                 </div>
                 <div class="pull-right signout">
-                  <a href="#" class="btn btn-default line-height-30 btn-flat" onClick="window.location.reload()">Sign out
+                  <a href="#" class="btn btn-default line-height-30 btn-flat" ng-click="signOut()">
+                    Sign out
                   </a>
                 </div>
               </li>
