is check logged in - employer

--- a/src/main/webapp/resource/pages/content/outside/employer_home.html
+++ b/src/main/webapp/resource/pages/content/outside/employer_home.html
@@ -33,7 +33,7 @@
 
               <div id="employer_signin" class="tab-pane fade in">
                 <div class="register-box-body">
-                  <form action="#" method="post" name="singinform" novalidate>
+                  <form method="post" name="singinform" novalidate>
                     <div class="form-group has-feedback">
                         <input type="text" class="form-control" name="username" ng-model="userName" placeholder="Email" required>
                         <span class="glyphicon glyphicon-envelope form-control-feedback">
@@ -71,7 +71,7 @@
                             <button type="submit" class="btn button text-center postjobs">Sign In
                             </button>
                           </a> -->
-                          <button type="button" ng-click="validatesignin();" class="btn button text-center" >Sign In</button>
+                          <button type="submit" ng-click="validatesignin();" class="btn button text-center" >Sign In</button>
                         </div>
                         <!-- /.col -->
                       </div>
