services - register and feedback

--- a/src/main/webapp/resource/pages/header/header.html
+++ b/src/main/webapp/resource/pages/header/header.html
@@ -13,11 +13,11 @@
           <i class="fa fa-bars">
           </i>
         </button>
-      </div>
+      </div>-->
       <!-- Collect the nav links, forms, and other content for toggling -->
 
 
-    <div id="employeeheader" style="display:none;">
+    <div id="employeeheader">
       <div class="navbar-header">
         <div class="navbar-brand">
           <b>Jobumes
@@ -92,7 +92,7 @@
       </div>
       <div class="collapse navbar-collapse pull-left" id="navbar-collapse3">
         <ul id="nav" class="nav navbar-nav">
-          <li class="employer_dashboard active">
+          <li class="employer_dashboard">
             <a href="#/employer-dashboard">
               <span> Dashboard
               </span>
@@ -234,11 +234,12 @@
 <script type="text/javascript">
   $(document).ready(function()
   {
-    $(".posted_jobs").removeClass("active");
-    $(".postajob").removeClass("active");
-    $(".boolean_search").removeClass("active");
-    $(".my_favorites").removeClass("active");
-    $(".saved_search").removeClass("active");
+    // $(".employer_dashboard").addClass("active");
+    // $(".posted_jobs").removeClass("active");
+    // $(".postajob").removeClass("active");
+    // $(".boolean_search").removeClass("active");
+    // $(".my_favorites").removeClass("active");
+    // $(".saved_search").removeClass("active");
 
     $(".employer_dashboard").click(function()
     {
@@ -319,11 +320,11 @@
   $(document).ready(function()
   {
 
-    $(".emp_dashboard").addClass("active");
-    $(".myjobs").removeClass("active");
-    $(".graphsume").removeClass("active");
-    $(".detailed_resume").removeClass("active");
-    $(".my_documents").removeClass("active");
+    // $(".emp_dashboard").addClass("active");
+    // $(".myjobs").removeClass("active");
+    // $(".graphsume").removeClass("active");
+    // $(".detailed_resume").removeClass("active");
+    // $(".my_documents").removeClass("active");
 
     $(".emp_dashboard").click(function()
     {
@@ -370,12 +371,12 @@
   });
 
   $(document).ready(function(){
-    $("#employeeheader").hide();
-      $("#signoutheader").hide();
-      $("#homeheader").show();
-      $("#employerheader").hide();
-      $("#signinheader").show();
-      $("#footersection").show();
+    // $("#employeeheader").hide();
+    //   $("#signoutheader").hide();
+    //   $("#homeheader").show();
+    //   $("#employerheader").hide();
+    //   $("#signinheader").show();
+    //   $("#footersection").show();
 
     $(".applyjob").click(function(){
         $("#employeeheader").show();
