--- a/src/main/webapp/resource/pages/content/outside/signup.html
+++ b/src/main/webapp/resource/pages/content/outside/signup.html
@@ -45,12 +45,13 @@
                   <span class="glyphicon glyphicon-earphone form-control-feedback">
                   </span>
                 </div>
-                <div class="form-group has-feedback">
+                <!-- role dropdown -->
+                <!-- <div class="form-group has-feedback">
                   <select class="form-control" ng-model="role" id="RadialLocation" required>
                     <option value="">Select a Role</option>
                     <option ng-repeat="items in getRoles" ng-value="items.uuid">{{items.name}}</option>
                   </select>
-                </div>
+                </div> -->
 
                 <div class="row">
                   <div class="col-xs-12">
