added file upload service

--- a/src/main/webapp/resource/pages/content/employee/employee_dashboard.html
+++ b/src/main/webapp/resource/pages/content/employee/employee_dashboard.html
@@ -389,7 +389,7 @@ ont-family: inherit;
           </div>
         </div>
         <div class="col-md-1" style="padding-top: 12px;">
-          <button class="btn button save margin-2" ng-click = "uploadFileLink()">
+          <button class="btn button save margin-2" ng-click = "uploadFile()">
             Upload
           </button>
         </div>
