profile settings page, fb and registration is done

--- a/src/main/webapp/resource/pages/content/outside/employee_home.html
+++ b/src/main/webapp/resource/pages/content/outside/employee_home.html
@@ -60,14 +60,14 @@
                   <div class="social-auth-links text-center">
                     <p>- OR -
                     </p>
-                    <a class="btn btn-social-icon btn-linkedin">
+                    <!-- <a class="btn btn-social-icon btn-linkedin">
                       <i class="fa fa-linkedin">
                       </i>
-                    </a>
-                    <a class="btn btn-social-icon btn-google">
+                    </a> -->
+                    <!-- <a class="btn btn-social-icon btn-google">
                       <i class="fa fa-google-plus">
                       </i>
-                    </a>
+                    </a> -->
                     <a class="btn btn-social-icon btn-google" ng-click="myFacebookLogin()">
                       <i class="fa fa-facebook">
                       </i>
