--- a/src/main/webapp/resource/pages/header/header.html
+++ b/src/main/webapp/resource/pages/header/header.html
@@ -175,7 +175,7 @@
                 </a>
 
               </li>
-              <li class="signin">
+              <li class="signin" style="display: none;">
                 <a href="javascript::void(0);" id="myBtn">
                   <span> Sign In
                   </span>
