--- a/src/main/webapp/resource/pages/content/outside/signup.html
+++ b/src/main/webapp/resource/pages/content/outside/signup.html
@@ -20,8 +20,8 @@
         </ul>
         <div class="tab-content">
           <!-- Employee start-->
-          <div id="employee_signup_page" class="tab-pane fade in active">
-            <div class="register-box-body" ng-controller='signupController'>
+          <div id="employee_signup_page" class="tab-pane fade in active" ng-controller='signupController'>
+            <div class="register-box-body">
               <form name="signUp" method="post" novalidate>
                 <div class="form-group has-feedback">
                   <input type="email" name="email" id="email" class="form-control" ng-model="userName" placeholder="Email or Username" required />
@@ -74,14 +74,14 @@
               <div class="social-auth-links text-center">
                 <p>- OR -
                 </p>
-                <a class="btn btn-social-icon btn-linkedin">
+                <!-- <a class="btn btn-social-icon btn-linkedin">
                   <i class="fa fa-linkedin">
                   </i>
-                </a>
-                <a class="btn btn-social-icon btn-google">
+                </a> -->
+                <!-- <a class="btn btn-social-icon btn-google">
                   <i class="fa fa-google-plus">
                   </i>
-                </a>
+                </a> -->
                 <a class="btn btn-social-icon btn-google" ng-click="myFacebookRegistration()">
                   <i class="fa fa-facebook">
                   </i>
@@ -89,7 +89,7 @@
               </div>
               <div class="col-sm-12 text-center">
                 <!--<a href="javascript::void();" data-toggle="modal" data-target="#myModal" class="text-center already_emp_employer">I already have a Employee / Employer</a>-->
-                <a href="#signin"  class="text-center">I already have a Employee / Employer
+                <a href="#/employee-home"  class="text-center">I already have a Employee / Employer
                 </a>
               </div>
             </div>
@@ -98,25 +98,25 @@
           <!-- Employer start-->
           <div id="employer_signup_page" class="tab-pane fade in">
             <div class="register-box-body">
-              <form action="#" method="post" novalidate>
+              <form method="post" name="signUpRec" novalidate>
                 <div class="form-group has-feedback">
-                  <input type="email" name="email" id="email" class="form-control" ng-model="email" placeholder="Email" required />
+                  <input type="email" name="email" id="email" class="form-control" ng-model="userNameRec" placeholder="Email" required />
                   <span class="glyphicon glyphicon-envelope form-control-feedback">
                   </span>
 
                 </div>
                 <div class="form-group has-feedback">
-                  <input type="password" class="form-control" name="pword" ng-model="pass" placeholder="Password" required>
+                  <input type="password" class="form-control" name="pword" ng-model="passwordRec" placeholder="Password" required>
                   <span class="glyphicon glyphicon-lock form-control-feedback">
                   </span>
                 </div>
-                <div class="form-group has-feedback">
+                <!-- <div class="form-group has-feedback">
                   <input type="password" class="form-control" name="pword" ng-model="pass" placeholder="Confirm Password" required>
                   <span class="glyphicon glyphicon-check form-control-feedback">
                   </span>
-                </div>
+                </div> -->
                 <div class="form-group has-feedback">
-                  <input type="text" class="form-control" placeholder="Phone Number">
+                  <input type="text" class="form-control" placeholder="Phone Number" ng-model="mobileRec" required>
                   <span class="glyphicon glyphicon-earphone form-control-feedback">
                   </span>
                 </div>
@@ -125,22 +125,39 @@
                     <div class="checkbox icheck">
                       <div class="checkbox">
                         <label>
-                          <input type="checkbox"> I agree to the
-                          <a href="#">terms
+                          <input type="checkbox" ng-model="iAgreeRec"> I agree to the
+                          <a>terms
                           </a>
                         </label>
                       </div>
                     </div>
                   </div>
                   <div class="col-xs-12 form-group text-center">
-                    <button type="submit" class="btn button text-center">Sign Up
+                    <button type="submit" class="btn button text-center" ng-disabled="!signUpRec.$valid" ng-click="signUpRecruiter()">
+                      Sign Up
                     </button>
                   </div>
                 </div>
               </form>
+              <div class="social-auth-links text-center">
+                <p>- OR -
+                </p>
+                <!-- <a class="btn btn-social-icon btn-linkedin">
+                  <i class="fa fa-linkedin">
+                  </i>
+                </a> -->
+                <!-- <a class="btn btn-social-icon btn-google">
+                  <i class="fa fa-google-plus">
+                  </i>
+                </a> -->
+                <a class="btn btn-social-icon btn-google" ng-click="myFacebookRegistrationRec()">
+                  <i class="fa fa-facebook">
+                  </i>
+                </a>
+              </div>
               <div class="col-sm-12 text-center">
                 <!--<a href="javascript::void();" data-toggle="modal" data-target="#myModal" class="text-center">I already have a Employee / Employer</a>-->
-                <a href="#/signin" class="text-center">I already have a Employee / Employer
+                <a href="#/employer-home" class="text-center">I already have a Employee / Employer
                 </a>
               </div>
             </div>
