--- a/src/main/webapp/resource/pages/content/outside/employee_home.html
+++ b/src/main/webapp/resource/pages/content/outside/employee_home.html
@@ -14,13 +14,13 @@
                   <span class="error ng-binding"></span>
                   <form name="myform" novalidate="" class="ng-pristine ng-invalid ng-invalid-required">
                     <div class="form-group has-feedback">
-                      <input type="text" name="username" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" ng-model="userName" placeholder="Email" required="">
+                      <input type="email" minlength=4 name="username" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" ng-model="userName" placeholder="Email" required>
                       <span class="glyphicon glyphicon-envelope form-control-feedback">
                       </span>
                        <span ng-show="myform.username.$touched &amp;&amp;myform.username.$invalid" class="ng-hide">user name is required</span>
                     </div>
                     <div class="form-group has-feedback">
-                      <input type="password" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" name="pword" ng-model="pass" placeholder="Password" required="">
+                      <input type="password" minlength=4 class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" name="pword" ng-model="pass" placeholder="Password" required>
                       <span class="glyphicon glyphicon-lock form-control-feedback">
                       </span>
 
@@ -50,7 +50,7 @@
                           <!-- <a href="#/employee-dashboard">
                             <input class="btn button text-center applyjob" type="button" value="Sign In" name="Submit" >
                           </a> -->
-                          <button type="submit" ng-click="validatesignin();" class="btn button text-center" >Sign In</button>
+                          <button ng-disabled="!myform.$valid" type="submit" ng-click="validatesignin();" class="btn button text-center" >Sign In</button>
                         </div>
                       </div>
                     </div>
