--- a/src/main/webapp/resource/pages/content/outside/employer_home.html
+++ b/src/main/webapp/resource/pages/content/outside/employer_home.html
@@ -35,13 +35,13 @@
                 <div class="register-box-body">
                   <form method="post" name="singinform" novalidate>
                     <div class="form-group has-feedback">
-                        <input type="text" class="form-control" name="username" ng-model="userName" placeholder="Email" required>
+                        <input type="email" minlength=4 class="form-control" name="username" ng-model="userName" placeholder="Email" required>
                         <span class="glyphicon glyphicon-envelope form-control-feedback">
                         </span>
 
                     </div>
                     <div class="form-group has-feedback">
-                        <input type="password" class="form-control" name="password" placeholder="Password" ng-model="pass" required>
+                        <input type="password" minlength=4 class="form-control" name="password" placeholder="Password" ng-model="pass" required>
                         <span class="glyphicon glyphicon-lock form-control-feedback">
                         </span>
 
@@ -71,7 +71,7 @@
                             <button type="submit" class="btn button text-center postjobs">Sign In
                             </button>
                           </a> -->
-                          <button type="submit" ng-click="validatesignin();" class="btn button text-center" >Sign In</button>
+                          <button type="submit" ng-disabled="!singinform.$valid" ng-click="validatesignin();" class="btn button text-center" >Sign In</button>
                         </div>
                         <!-- /.col -->
                       </div>
