--- a/src/main/webapp/resource/pages/content/outside/profile.html
+++ b/src/main/webapp/resource/pages/content/outside/profile.html
@@ -276,16 +276,39 @@
 				                  <div class="panel-heading">Change Password
 				                  </div>
 				              	 <div class="new-body">
-				    								<div class="form-group col-md-4 col-lg-4 col-sm-12 col-xs-12">
-				            		      <input type="text" placeholder="New Password" class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" id="newPassword" name="newPassword" ng-model="newPassword" required="">
-				            		    </div>
-				            		    <div class="form-group col-md-4 col-lg-4 col-sm-12 col-xs-12">
-				            		      <input type="text" placeholder="Retype Password" class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" id="newPassword" name="newPassword" ng-model="reTypePassword" required="">
-				            		    </div>
-				            		    <div class="form-group" align="center">
-				            		  		<a class="btn button" ng-click="changePwd()">Update Password
-					 	 						  		</a>
-							            		    </div>
+													 <form name="chnPwd">
+														 <div class="row">
+															<div class="form-group col-md-4 col-lg-4 col-sm-12 col-xs-12">
+	 				            		      Current Password
+	 				            		    </div>
+															<div class="form-group col-md-4 col-lg-4 col-sm-12 col-xs-12">
+	 				            		      <input type="password" placeholder="Current Password" minlength=4 class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" id="newPassword" name="currPassword" ng-model="currPassword" required >
+	 				            		    </div>
+														</div>
+														<div class="row">
+															<div class="form-group col-md-4 col-lg-4 col-sm-12 col-xs-12">
+	 				            		      New Password
+	 				            		    </div>
+					    								<div class="form-group col-md-4 col-lg-4 col-sm-12 col-xs-12">
+					            		      <input type="password" placeholder="New Password" minlength=4 class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" id="newPassword" name="newPassword" ng-model="newPassword" required >
+					            		    </div>
+														</div>
+														<div class="row">
+															<div class="form-group col-md-4 col-lg-4 col-sm-12 col-xs-12">
+	 				            		      Retype New Password
+	 				            		    </div>
+					            		    <div class="form-group col-md-4 col-lg-4 col-sm-12 col-xs-12">
+					            		      <input type="password" placeholder="Retype Password" minlength=4 class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" id="newPassword" name="newPassword" ng-model="reTypePassword" required >
+					            		    </div>
+														</div>
+														<div class="row">
+															<div class="form-group" align="center">
+																<button ng-disabled="!chnPwd.$valid" ng-click="changePwd()" type="submit" class="btn button save margin-2" ng-click="submitted=true">SUBMIT</button>
+					            		  		<!-- <a class="btn button" ng-click="changePwd()">Update Password
+						 	 						  		</a> -->
+								            	</div>
+														</div>
+													</form>
 											  </div>
 	 	 					 </div>
 		                </div>
