--- a/src/main/webapp/resource/pages/content/outside/signup.html
+++ b/src/main/webapp/resource/pages/content/outside/signup.html
@@ -24,13 +24,13 @@
             <div class="register-box-body">
               <form name="signUp" method="post" novalidate>
                 <div class="form-group has-feedback">
-                  <input type="email" name="email" id="email" class="form-control" ng-model="userName" placeholder="Email or Username" required />
+                  <input type="email" minlength=4 name="email" id="email" class="form-control" ng-model="userName" placeholder="Email or Username" required />
                   <span class="glyphicon glyphicon-envelope form-control-feedback">
                   </span>
 
                 </div>
                 <div class="form-group has-feedback">
-                  <input type="password" class="form-control" name="pword" ng-model="password" placeholder="Password" required>
+                  <input type="password" minlength=4 class="form-control" name="pword" ng-model="password" placeholder="Password" required>
                   <span class="glyphicon glyphicon-lock form-control-feedback">
                   </span>
                 </div>
@@ -41,7 +41,7 @@
                 </div> -->
 
                 <div class="form-group has-feedback">
-                  <input type="text" class="form-control" placeholder="Phone Number" ng-model='mobile'>
+                  <input type="text" minlength=4 class="form-control" placeholder="Phone Number" ng-model='mobile'>
                   <span class="glyphicon glyphicon-earphone form-control-feedback">
                   </span>
                 </div>
@@ -100,13 +100,13 @@
             <div class="register-box-body">
               <form method="post" name="signUpRec" novalidate>
                 <div class="form-group has-feedback">
-                  <input type="email" name="email" id="email" class="form-control" ng-model="userNameRec" placeholder="Email" required />
+                  <input type="email" minlength=4 name="email" id="email" class="form-control" ng-model="userNameRec" placeholder="Email" required />
                   <span class="glyphicon glyphicon-envelope form-control-feedback">
                   </span>
 
                 </div>
                 <div class="form-group has-feedback">
-                  <input type="password" class="form-control" name="pword" ng-model="passwordRec" placeholder="Password" required>
+                  <input type="password" minlength=4 class="form-control" name="pword" ng-model="passwordRec" placeholder="Password" required>
                   <span class="glyphicon glyphicon-lock form-control-feedback">
                   </span>
                 </div>
@@ -116,7 +116,7 @@
                   </span>
                 </div> -->
                 <div class="form-group has-feedback">
-                  <input type="text" class="form-control" placeholder="Phone Number" ng-model="mobileRec" required>
+                  <input type="text" minlength=4 class="form-control" placeholder="Phone Number" ng-model="mobileRec" required>
                   <span class="glyphicon glyphicon-earphone form-control-feedback">
                   </span>
                 </div>
