--- a/src/main/webapp/resource/pages/content/employee/my_video.html
+++ b/src/main/webapp/resource/pages/content/employee/my_video.html
@@ -16,7 +16,8 @@
               <div class="col-sm-12 ng-scope">
                 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
                 <div class='embed-container'>
-                  <iframe src='https://www.youtube.com/embed/ggb9uhFV8NY' frameborder='0' allowfullscreen></iframe>
+                  <!-- <iframe src='https://www.youtube.com/embed/ggb9uhFV8NY' frameborder='0' allowfullscreen></iframe> -->
+                  <iframe ng-src='{{videoLink}}' frameborder='0' allowfullscreen></iframe>
                 </div>
               </div>
               <form name="uploadForm" ng-submit="uploadDocument(doctypeId,'98','YIN16JNWN3B11893')" class="ng-pristine ng-invalid ng-invalid-required">
@@ -50,7 +51,7 @@
                       <button class="btn button save margin-2" type="submit">Upload</button>
                     </div>
               </form>
-              <div class="col-sm-12 ng-scope" style="overflow-x:auto;">
+              <div class="col-sm-12 ng-scope" style="overflow-x:auto; display: none;">
                 <table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
                   <thead>
                     <tr role="row">
@@ -119,7 +120,7 @@
                     <strong>Share</strong>
                   </p>
                   <ul>
-                    <li> You can share this interview with your friends &amp; employer. ( 
+                    <li> You can share this interview with your friends &amp; employer. (
                       <a href="#/shareinfo/YIN16JNWN3B11893">Click here</a> to track who viewed your videos).
                     </li>
                   </ul>
