--- a/src/main/webapp/resource/pages/content/employer/postajob.html
+++ b/src/main/webapp/resource/pages/content/employer/postajob.html
@@ -26,12 +26,12 @@
           </div>
       </div>
       </div>
-      <div class="form-group col-md-12 text-center orclass">
+      <div class="form-group col-md-12 text-center orclass" style="display: none;">
       - OR -
     </div>
 
 
-    <div class="col-md-12">
+    <div class="col-md-12" style="display: none;">
             <div class="panel shadownone">
         <div class="panel-heading deatilednew ">Advanced option</div>
         <div class="new-body">
