changes in edit profile and my profile pages

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -68,6 +68,7 @@
 	<script src="resource/js/custom/employee/controllers/downloadsController.js"></script>
 	<script src="resource/js/custom/employee/controllers/editProfileController.js"></script>
 	<script src="resource/js/custom/employee/controllers/employeeDashboardController.js"></script>
+	<script src="resource/js/custom/employee/controllers/graphicalResumeController.js"></script>
 	<script src="resource/js/custom/employee/controllers/graphsumeController.js"></script>
 	<script src="resource/js/custom/employee/controllers/myjobsController.js"></script>
 	<script src="resource/js/custom/employee/controllers/myVideoController.js"></script>
