--- a/src/main/webapp/resource/pages/content/employee/edit_profile.html
+++ b/src/main/webapp/resource/pages/content/employee/edit_profile.html
@@ -1112,12 +1112,35 @@ div#panelheight {
                                   <span class=""><input type="checkbox">  Upon Requiter request will you provide your H1 Copy</span>
                                 </div>
                               </div>
-
+                              <div class="col-md-12">
+                                <div class="form-group  col-md-12">
+                                  <label for="skills">Experience
+                                  </label>
+                                  <textarea class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" cols="3" rows="3" ng-model="personalDetails.experience" name="experience" id="experience" required="" placeholder="Please Enter Work Experience">
+                                  </textarea>
+                                  <div class="th-error ng-scope ng-active" ng-if="jobseekersOther.$submitted" ng-messages="jobseekersOther.keySkill.$error" ng-messages-include="errors">
+                                    <div ng-message="required" class="ng-scope">This field is required
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-md-12">
+                                <div class="form-group  col-md-12">
+                                  <label for="skills">Executive Summary
+                                  </label>
+                                  <textarea class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" cols="3" rows="3" ng-model="personalDetails.executiveSummary" name="executiveSummary" id="executiveSummary" required="" placeholder="Please Enter Work Experience">
+                                  </textarea>
+                                  <div class="th-error ng-scope ng-active" ng-if="jobseekersOther.$submitted" ng-messages="jobseekersOther.keySkill.$error" ng-messages-include="errors">
+                                    <div ng-message="required" class="ng-scope">This field is required
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
                               <div class="col-md-12">
                                 <div class="form-group  col-md-12">
                                   <label for="skills">Key Skills
                                   </label>
-                                  <textarea class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" cols="2" rows="1" ng-model="personalDetails.keySkills" name="keySkill" id="keySkill" required="" placeholder="Please Enter Skills With comma separated.Ex:Java,.Net,SQL,etc... ">
+                                  <textarea class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" cols="3" rows="3" ng-model="personalDetails.keySkills" name="keySkill" id="keySkill" required="" placeholder="Please Enter Skills With comma separated.Ex:Java,.Net,SQL,etc... ">
                                   </textarea>
                                   <!-- ngIf: jobseekersOther.$submitted -->
                                   <div class="th-error ng-scope ng-active" ng-if="jobseekersOther.$submitted" ng-messages="jobseekersOther.keySkill.$error" ng-messages-include="errors">
@@ -1316,7 +1339,7 @@ div#panelheight {
                                         </div>
                                         <div class="form-group">
                                           Specialization
-                                          <input type="text" class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required ng-valid-maxlength" id="specialization" placeholder="Highest Degree" ng-model="educationDetails.specialization" name="specialization" ng-maxlength="500" required="">
+                                          <input type="text" class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required ng-valid-maxlength" id="specialization" placeholder="Specialization" ng-model="educationDetails.specialization" name="specialization" ng-maxlength="500" required="">
                                           <!-- ngIf: jobseekeredu.$submitted -->
                                         </div>
                                         <div class="form-group">
