added google plus registration

--- a/src/main/webapp/resource/pages/content/outside/signup.html
+++ b/src/main/webapp/resource/pages/content/outside/signup.html
@@ -78,10 +78,12 @@
                   <i class="fa fa-linkedin">
                   </i>
                 </a> -->
-                <!-- <a class="btn btn-social-icon btn-google">
-                  <i class="fa fa-google-plus">
-                  </i>
-                </a> -->
+                <a class="btn btn-social-icon btn-google" ng-click="renderSignInButton('jobSeeker')">
+                  <span id="signInButton">
+                    <i class="fa fa-google-plus">
+                    </i>
+                  </span>
+                </a>
                 <a class="btn btn-social-icon btn-google" ng-click="myFacebookRegistration()">
                   <i class="fa fa-facebook">
                   </i>
@@ -146,10 +148,12 @@
                   <i class="fa fa-linkedin">
                   </i>
                 </a> -->
-                <!-- <a class="btn btn-social-icon btn-google">
-                  <i class="fa fa-google-plus">
-                  </i>
-                </a> -->
+                <a class="btn btn-social-icon btn-google" ng-click="renderSignInButton('jobRecruiter')">
+                  <span id="signInButton2">
+                    <i class="fa fa-google-plus">
+                    </i>
+                  </span>
+                </a>
                 <a class="btn btn-social-icon btn-google" ng-click="myFacebookRegistrationRec()">
                   <i class="fa fa-facebook">
                   </i>
